# dsa5106-group-2

./: .gitignore  CLAUDE.md  NSCC.md  README.md  pyproject.toml  requirements.txt  train_llama.sh  train_llama.sh.o13535878
.claude/: settings.local.json
extension/MedMCQA/: eval_summary.py  evaluate.py  finetune.py  lora.py  results.md  utils.py
extension/PubMedQA/: dora.py  eval_summary.py  evaluate.py  finetune.py  results.md
extension/gsm8k/: evaluate.py  finetune.py  results.md  utils.py
extension/vit/: evaluate.py  finetune.py  results.md  utils.py
notebooks/: hyperparam_sweep.ipynb  track_weights.ipynb
output/dora_results/: config.json  generation_config.json  tokenizer_config.json
reference-code/commonsense_reasoning/: finetune.py  pyproject.toml  requirements.txt
reference-code/commonsense_reasoning/peft/src/peft/: __init__.py
reproduction/: car_vit.py  dora.py  dora_lora_bert.ipynb  eval_summary.py  evaluate.py  finetune.py  lora.py  results.md  utils.py  vit_car.ipynb  vit_cifar.ipynb
reproduction/weight_decomposition_analysis/: blip.py  vit_car.py  vit_cifar.py  vit_flower.py
scripts/: init-datasets.sh  init-ref-commonsense_reasoning.sh
scripts/nscc-jobs/: dora-r16-l2.sh  dora-r16-l3.sh  dora-r4-l2.sh  evaluate-base.sh  evaluate-dora.sh  evaluate-lora.sh  finetune-dora.sh  finetune-lora.sh  lora-r16-l1.sh  lora-r16-l3.sh  lora-r4-l1.sh  lora-r4-l3.sh  ref-commonsense_reasoning.sh
scripts/nscc-jobs/10k/: dora-1b-r2-l2.sh  dora-1b-r4-l2.sh  dora-1b-r8-l2.sh  dora-r16-l1.sh  dora-r16-l2.sh  dora-r16-l3.sh  (+14 more)
src/models/: dora.py
src/tests/: test_dora.py
(+138 files in other folders)
