[project]
name = "dsa5106-group-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "fire>=0.7.1",
    "peft>=0.18.1",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
