[project]
name = "commonsense-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0, <3.11"
dependencies = [
    "accelerate>=1.13.0",
    "appdirs==1.4.4",
    "bitsandbytes>=0.49.2",
    "black[jupyter]==23.12.0",
    "datasets>=2.15.0",
    "fire==0.5.0",
    "gradio==4.9.0",
    "protobuf>=7.34.1",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "torch",
    "transformers>=5.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
